--- a/20-08-2023/index.html
+++ b/20-08-2023/index.html
@@ -25,7 +25,7 @@
   }
   .circle {
     background-color: #998235;
-    border-radius: 50%;
+    border-radius: 50px;
     padding: 50px;
   }
 </style>
