--- a/05-09-2023/index.html
+++ b/05-09-2023/index.html
@@ -1,26 +1,45 @@
-<div class="square"></div>
-<div class="square border"></div>
-<div class="square border"></div>
-<div class="square"></div>
-
-<style>
+<div class="container">
+    <div class="square tl"></div>
+    <div class="square tr"></div>
+    <div class="square bl"></div>
+    <div class="square br"></div>
+  </div>
+  <style>
   body {
     margin: 0;
+    box-sizing: border-box;
     height: 100%;
+    width: 100%;
     background: #763EDF;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+  }
+  .container {
+    position: relative;
+    width: fit-content;
+    height: fit-content;
   }
   .square {
     background: #6BD0FA;
     width: 5rem;
     height: 5rem;
+    position: absolute;
   }
-  .square.border {
-    border: 1.25rem solid #763EDF;
+  .tl {
+    top: 0;
+    left: 0;
   }
-  
-</style>
+  .tr {
+    top: 1.25rem;
+    right: 1.25rem;
+  }
+  .bl {
+    left: 1.25rem;
+    bottom: 1.25rem;
+  }
+  .br {
+    bottom: 0;
+    right: 0;
+  }
+  </style>
