--- a/09-09-2023/index.html
+++ b/09-09-2023/index.html
@@ -1,23 +1,37 @@
-<div class="e orange">
+<div class="align l">
+  <div class="e orange">
     <div class="top"></div>
     <div class="center"></div>
     <div class="bottom"></div>
   </div>
+  </div>
+  <div class="align r">
   <div class="e red r180">
     <div class="top"></div>
     <div class="center"></div>
     <div class="bottom"></div>
+  </div>
   </div>
   <style>
     body {
       margin: 0;
       background: #E6D9AC;
     }
+    .align {
+      position: absolute;
+    }
+    .align.l {
+      top: 3.75rem;
+      left: 7.85rem;
+    }
+    .align.r {
+      top: 5.6rem;
+      right: 7.75rem;
+    }
     .e {
       width: 1.9rem;
       height: 9.35rem;
       position: relative;
-      margin: 3.75rem 5rem 5rem 7.85rem;
     }
     .top, .center, .bottom {
       position: absolute;
@@ -29,7 +43,7 @@
       top: 0;
     }
     .center {
-      top: 39%;
+      top: 40%;
     }
     .bottom {
       bottom: 0;
