--- a/09-12-2023/index.html
+++ b/09-12-2023/index.html
@@ -16,30 +16,30 @@
       .h {
         width: 0;
         height: 0;
-        border-bottom: 1.5rem solid #82CA9C;
-        border-right: 3rem solid transparent;
-        border-left: 3rem solid transparent;
+        border-bottom: 20px solid #82CA9C;
+        border-right: 40px solid transparent;
+        border-left: 40px solid transparent;
         position: relative;
       }
       .h:after {
         position: absolute;
         content: '';
-        width: 5rem;
-        height: 3rem;
+        width: 80;
+        height: 35;
         background: #82CA9C;
-        top: 1rem;
-        left: -2rem;
+        top: 20;
+        left: -40;
       }
       .f {
         display: flex;
         justify-content: center;
       }
-      .f.r {
+      .r {
          transform: rotate(180deg);
       }
       .f.v {
         flex-direction: column;
-        gap: 3.6rem;
+        gap: 50px;
         align-items: center;
         height: 100vh;
       }
