--- a/20-12-2023/index.html
+++ b/20-12-2023/index.html
@@ -1,6 +1,6 @@
 <div class="p">
-    <div class="s"></div>
-    <div class="s"></div>
+    <div class="s t"></div>
+    <div class="s b"></div>
 </div>
 <style>
       body {
@@ -13,7 +13,24 @@
       .s {
         margin: 0 auto 30;
         width: 90;
-        height: 30px;
+        height: 30;
         border: 30px solid #F1F1F2;
+        position: relative;
       }
- </style>
+      .t:before, .t:after, .b:before {
+        content: '';
+        position: absolute;
+        left: -30;
+        width: 30;
+        height: 30;
+        background: #811E1F;
+      }
+      .t:after {
+        top: 60;
+        background: #F1F1F2;
+      }
+      .b:before {
+        top: -30;
+        left: 0;
+      }
+</style>
